# end-to-end_linkedin

./: .gitignore  README.md  docker-compose.yaml  proxy.txt  pyproject.toml
dags/: firts_dag.py  scrapy_crawl.py
end_to_end_linkedin_scraping/: json.json  scrapy_crawl.py
end_to_end_linkedin_scraping/end_to_end_linkedin/: items.py  middlewares.py  scrapy.cfg  settings.py
end_to_end_linkedin_scraping/end_to_end_linkedin/end_to_end_linkedin/: pipelines.py  settings.py
end_to_end_linkedin_scraping/end_to_end_linkedin/spiders/: linkedin_jobs.py
instrucoes/: overview.md  scrapy.md
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variable.tf
